--- a/server/views/licenceConditions/includes/appointmentName.pug
+++ b/server/views/licenceConditions/includes/appointmentName.pug
@@ -1,7 +1,7 @@
 div.pure-g.paddingBottom
     div.pure-u-3-4
       label(for='appointmentName') Name
-      input(type='text' name='appointmentName' id='appointmentName' class='form-control' value=condition.user_submission && condition.user_submission.appointmentName)
+      input(type='text' name='appointmentName' id='appointmentName' class='form-control' value=condition.user_submission && condition.user_submission.appointmentName aria-label="Name of psychiatrist, psychologist or medical practitioner")
 
 
 div.inline
