--- a/server/views/licenceConditions/includes/attendSampleDetails.pug
+++ b/server/views/licenceConditions/includes/attendSampleDetails.pug
@@ -1,9 +1,9 @@
 div.pure-g
     div.pure-u-1
         label(for='attendSampleDetailsName') Name
-            input(type='text' name='attendSampleDetailsName' id='attendSampleDetailsName' class='form-control' value=condition.user_submission && condition.user_submission.attendSampleDetailsName)
+            input(type='text' name='attendSampleDetailsName' id='attendSampleDetailsName' class='form-control' value=condition.user_submission && condition.user_submission.attendSampleDetailsName aria-label="Appointment name")
     div.pure-u-1
         label(for='attendSampleDetailsAddress') Address
-            textarea(name='attendSampleDetailsAddress' id='attendSampleDetailsAddress' class='form-control' rows='2')
+            textarea(name='attendSampleDetailsAddress' id='attendSampleDetailsAddress' class='form-control' rows='2' aria-label="Appointment address")
                 if condition.user_submission && condition.user_submission.attendSampleDetailsAddress
                     | #{condition.user_submission.attendSampleDetailsAddress}
