--- a/server/views/licenceConditions/includes/curfewDetails.pug
+++ b/server/views/licenceConditions/includes/curfewDetails.pug
@@ -6,10 +6,10 @@ textarea(name='curfewAddress' id='curfewAddress' class='form-control' rows='4')
 div.pure-g.smallPaddingBottom
     div.pure-u-1-2.padRight7
         label(for='curfewFrom') From
-        input(type='text' name='curfewFrom' id='curfewFrom' class='form-control' value=condition.user_submission && condition.user_submission.curfewFrom)
+        input(type='text' name='curfewFrom' id='curfewFrom' class='form-control' value=condition.user_submission && condition.user_submission.curfewFrom aria-label="Start of curfew hours")
     div.pure-u-1-2.padLeft7
         label(for='curfewTo') To
-        input(type='text' name='curfewTo' id='curfewTo' class='form-control' value=condition.user_submission && condition.user_submission.curfewTo)
+        input(type='text' name='curfewTo' id='curfewTo' class='form-control' value=condition.user_submission && condition.user_submission.curfewTo aria-label="End of curfew hours")
 
 div.multiple-choice
     input(id='curfewTagRequired' name='curfewTagRequired' type='checkbox' value='yes' checked=condition.user_submission && condition.user_submission.curfewTagRequired)
