--- a/server/views/licenceConditions/includes/noUnsupervisedContact.pug
+++ b/server/views/licenceConditions/includes/noUnsupervisedContact.pug
@@ -14,8 +14,8 @@ div.pure-g
 
 div.inlineFormItem
     label(for='unsupervisedContactAge') Age
-    input(type='number' name='unsupervisedContactAge' id='unsupervisedContactAge' class='form-control' value=condition.user_submission && condition.user_submission.unsupervisedContactAge)
+    input(type='number' name='unsupervisedContactAge' id='unsupervisedContactAge' class='form-control' value=condition.user_submission && condition.user_submission.unsupervisedContactAge aria-label="Age")
 
 div
     label(for='unsupervisedContactSocial') Name of social services dept.
-    input(type='text' name='unsupervisedContactSocial' id='unsupervisedContactSocial' class='form-control' value=condition.user_submission && condition.user_submission.unsupervisedContactSocial)
+    input(type='text' name='unsupervisedContactSocial' id='unsupervisedContactSocial' class='form-control' value=condition.user_submission && condition.user_submission.unsupervisedContactSocial aria-label="Name of social services department")
