--- a/server/views/licenceConditions/includes/noWorkWithAge.pug
+++ b/server/views/licenceConditions/includes/noWorkWithAge.pug
@@ -1,3 +1,3 @@
 div.inlineFormItem
     label(for='noWorkWithAge') Age
-    input(type='number' name='noWorkWithAge' id='noWorkWithAge' class='form-control' value=condition.user_submission && condition.user_submission.noWorkWithAge)
+    input(type='number' name='noWorkWithAge' id='noWorkWithAge' class='form-control' value=condition.user_submission && condition.user_submission.noWorkWithAge aria-label="Age")
