--- a/server/views/licenceConditions/includes/notToReside.pug
+++ b/server/views/licenceConditions/includes/notToReside.pug
@@ -14,4 +14,4 @@ div.pure-g
 
 div.inlineFormItem
     label(for='notResideWithAge') Age
-    input(type='number' name='notResideWithAge' id='notResideWithAge' class='form-control' value=condition.user_submission && condition.user_submission.notResideWithAge)
+    input(type='number' name='notResideWithAge' id='notResideWithAge' class='form-control' value=condition.user_submission && condition.user_submission.notResideWithAge aria-label="Age")
