--- a/server/views/licenceConditions/includes/reportingDetails.pug
+++ b/server/views/licenceConditions/includes/reportingDetails.pug
@@ -7,7 +7,7 @@ div.smallPaddingBottom
 div.pure-g.smallPaddingBottom
     div.pure-u-1-2
         label(for='reportingTime') At (time)
-        input(type='text' name='reportingTime' id='reportingTime' class='form-control' value=condition.user_submission && condition.user_submission.reportingTime)
+        input(type='text' name='reportingTime' id='reportingTime' class='form-control' value=condition.user_submission && condition.user_submission.reportingTime aria-label="Time")
 
     div.pure-u-6-12
         div.pure-g.lineMarginTop
