--- a/server/views/licenceConditions/includes/confinedDetails.pug
+++ b/server/views/licenceConditions/includes/confinedDetails.pug
@@ -1,10 +1,10 @@
 div.pure-g.paddingBottom
     div.pure-u-1-2.padRight7
         label(for='confinedTo') To
-        input(type='text' name='confinedTo' id='confinedTo' class='form-control' value=condition.user_submission && condition.user_submission.confinedTo)
+        input(type='text' name='confinedTo' id='confinedTo' class='form-control' value=condition.user_submission && condition.user_submission.confinedTo aria-label="Time to")
     div.pure-u-1-2.padLeft7
         label(for='confinedFrom') From
-        input(type='text' name='confinedFrom' id='confinedFrom' class='form-control' value=condition.user_submission && condition.user_submission.confinedFrom)
+        input(type='text' name='confinedFrom' id='confinedFrom' class='form-control' value=condition.user_submission && condition.user_submission.confinedFrom aria-label="Time from")
 
 div.inline
     div.multiple-choice
