--- a/server/views/licenceConditions/includes/notInSightOf.pug
+++ b/server/views/licenceConditions/includes/notInSightOf.pug
@@ -1,4 +1,4 @@
 label(for='notInSightOf') Restricted places
-textarea(name='notInSightOf' id='notInSightOf' class='form-control' rows='2')
+textarea(name='notInSightOf' id='notInSightOf' class='form-control' rows='2' aria-label="Restricted places")
     if condition.user_submission && condition.user_submission.notInSightOf
         | #{condition.user_submission.notInSightOf}
