--- a/server/views/proposedAddress/includes/addressForm.pug
+++ b/server/views/proposedAddress/includes/addressForm.pug
@@ -9,20 +9,20 @@ mixin addressForm(index, alternative)
                 div.pure-u-1.pure-u-md-3-5
                     div.form-group.midMarginBottom
                         label.form-label(for="address1-"+index) Building and street
-                        input.form-control(id="address1-"+index name=addressPosition+"[addressLine1]" value=thisAddress.addressLine1 autofocus)
+                        input.form-control(id="address1-"+index name=addressPosition+"[addressLine1]" value=thisAddress.addressLine1 autofocus aria-label="Building and street")
                         input.form-control.smallMarginTop(id="address2-"+index name=addressPosition+"[addressLine2]" value=thisAddress.addressLine2)
 
                     div.form-group.midMarginBottom
                         label.form-label(for="town-"+index) Town or city
-                        input.form-control(id="town-"+index name=addressPosition+"[addressTown]" value=thisAddress.addressTown)
+                        input.form-control(id="town-"+index name=addressPosition+"[addressTown]" value=thisAddress.addressTown aria-label="Town or city")
 
                     div.form-group.midMarginBottom.pure-u-sm-1.pure-u-md-1-2
                         label.form-label(for="postCode-"+index) Postcode
-                        input.form-control(id="postCode-"+index name=addressPosition+"[postCode]" value=thisAddress.postCode)
+                        input.form-control(id="postCode-"+index name=addressPosition+"[postCode]" value=thisAddress.postCode aria-label="Postcode")
 
                     div.form-group.pure-u-sm-1.pure-u-md-3-4
                         label.form-label(for="telephone-"+index) Telephone
-                        input.form-control(id="telephone-"+index name=addressPosition+"[telephone]" value=thisAddress.telephone)
+                        input.form-control(id="telephone-"+index name=addressPosition+"[telephone]" value=thisAddress.telephone aria-label="Telephone")
 
         div.pure-u-1.pure-u-md-1-2
             div.pure-g
@@ -31,11 +31,11 @@ mixin addressForm(index, alternative)
             div.pure-g
                 div.form-group.pure-u-1.pure-u-sm-10-24
                     label.form-label(for="occupierName-"+index) Name
-                    input.form-control(id="occupierName-"+index name=addressPosition+"[occupier][name]" value=savedOccupier.name)
+                    input.form-control(id="occupierName-"+index name=addressPosition+"[occupier][name]" value=savedOccupier.name aria-label="Main occupier's name")
 
                 div.form-group.pure-u-1.pure-u-sm-10-24.sm-PadLeftRight15
                     label.form-label(for="occupierRelation-"+index) Relation to offender
-                    input.form-control(id="occupierRelation-"+index name=addressPosition+"[occupier][relationship]" value=savedOccupier.relationship)
+                    input.form-control(id="occupierRelation-"+index name=addressPosition+"[occupier][relationship]" value=savedOccupier.relationship aria-label="Main occupier's relationship to offender")
 
             +otherResidents(addressPosition, thisAddress)
 
