--- a/server/views/reporting/reportingInstructions.pug
+++ b/server/views/reporting/reportingInstructions.pug
@@ -19,27 +19,27 @@ block content
                     div.pure-u-1.pure-u-md-4-5
                         div.form-group
                             label.form-label(for="name") Name of person (or Duty Officer if unknown)
-                            input#name.form-control(name="name" type="text" value=data.name)
+                            input#name.form-control(name="name" type="text" value=data.name aria-label="Name (or Duty Officer's name)")
 
                         div.form-group
                             label.form-label(for="building") Building and street
-                            input#building.midMarginBottom.form-control(name="buildingAndStreet1" type="text" value=data.buildingAndStreet1)
+                            input#building.midMarginBottom.form-control(name="buildingAndStreet1" type="text" value=data.buildingAndStreet1 aria-label="Building and street")
                             input#street.form-control.block(name="buildingAndStreet2" type="text" value=data.buildingAndStreet2)
 
                         div.form-group
                             label.form-label(for="town") Town or city
-                            input#town.form-control(name="townOrCity" type="text" value=data.townOrCity)
+                            input#town.form-control(name="townOrCity" type="text" value=data.townOrCity aria-label="Town or city")
 
                         div.pure-g
                             div.pure-u-1.pure-u-md-3-5
                                 div.form-group
                                     label.form-label(for="postcode") Postcode
-                                    input#postcode.form-control.small(name="postcode" type="text" value=data.postcode)
+                                    input#postcode.form-control.small(name="postcode" type="text" value=data.postcode aria-label="Postcode")
                         div.pure-g
                             div.pure-u-1.pure-u-md-3-5
                                 div.form-group
                                     label.form-label(for="telephone") Telephone
-                                    input#telephone.form-control.small(name="telephone" type="text" value=data.telephone)
+                                    input#telephone.form-control.small(name="telephone" type="text" value=data.telephone aria-label="Telephone")
 
         include ../includes/roModificationWarning
         include ../includes/saveAndReturn
