--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -1,15 +1,17 @@
-table#hdcEligiblePrisoners.largeMarginBottom
-    thead
-        tr
-            th Name
-            th Prison no.
-            th.hideMobile Location
-            th.hideMobile HDCED
-            th.hideMobile CRD / ARD
-            th.hideMobile Status
-            th
-    tbody
-        if hdcEligible && hdcEligible.length > 0
+if hdcEligible && hdcEligible.length <= 0
+    span No offenders in this view
+else
+    table#hdcEligiblePrisoners.largeMarginBottom
+        thead
+            tr
+                th Name
+                th Prison no.
+                th.hideMobile Location
+                th.hideMobile HDCED
+                th.hideMobile CRD / ARD
+                th.hideMobile Status
+                th
+        tbody
             each prisoner, index in hdcEligible
                 tr.hdcEligible(class=index % 2 === 1 ? 'greyRow' : undefined)
                     td.name
