--- a/server/views/admin/users/add.pug
+++ b/server/views/admin/users/add.pug
@@ -40,15 +40,6 @@ block content
                         label.form-label(for="last") Last name
                         input#last.form-control(name="last" type="text")
 
-                        div.form-group.inline
-                            div Verify Nomis user name
-                            div.multiple-choice
-                                input#verifyYes(type="radio" value="Yes" name="verify" checked)
-                                label(for="verifyYes") Yes
-                            div.multiple-choice
-                                input#verifyNo(type="radio" value="No" name="verify")
-                                label(for="verifyNo") No
-
             div.pure-u-1.pure-u-md-2-5
                 div.pure-u-1.pure-u-md-4-5
                     div.form-group
@@ -61,17 +52,29 @@ block content
                         label.form-label(for="jobRole") Job Role
                         input#jobRole.form-control(name="jobRole" type="text")
 
-            div.pure-u-1.pure-u-md-2-5.largeMarginBottom.midPaddingBottom
+            div.pure-u-1.pure-u-md-2-5
                 div.pure-u-1.pure-u-md-4-5
                     div.form-group
                         label.form-label(for="email") Email
                         input#email.form-control(name="email" type="text")
 
-            div.pure-u-1.pure-u-md-2-5.largeMarginBottom.midPaddingBottom
+            div.pure-u-1.pure-u-md-2-5
                 div.pure-u-1.pure-u-md-4-5
                     div.form-group
                         label.form-label(for="telephone") Telephone
                         input#telephone.form-control(name="telephone" type="text")
+
+
+            div.pure-u-1.pure-u-md-2-5
+                div.pure-u-1.pure-u-md-4-5
+                    div.form-group.inline
+                        div Verify Nomis user name
+                        div.multiple-choice
+                            input#verifyYes(type="radio" value="Yes" name="verify" checked)
+                            label(for="verifyYes") Yes
+                        div.multiple-choice
+                            input#verifyNo(type="radio" value="No" name="verify")
+                            label(for="verifyNo") No
 
         div.paddingBottom.smallPaddingTop
             div.pure-u-1.inlineButtons
