--- a/server/views/admin/users/add.pug
+++ b/server/views/admin/users/add.pug
@@ -19,7 +19,7 @@ block content
             div.pure-u-1.pure-u-md-2-5
                 div.pure-u-1.pure-u-md-4-5
                     div.form-group
-                        label.form-label(for="newNomisId") Nomis ID
+                        label.form-label(for="newNomisId") Nomis Username
                         input#newNomisId.form-control(name="newNomisId" type="text")
 
             div.pure-u-1.pure-u-md-2-5
