--- a/server/views/admin/users/edit.pug
+++ b/server/views/admin/users/edit.pug
@@ -21,7 +21,7 @@ block content
             div.pure-u-1.pure-u-md-2-5
                 div.pure-u-1.pure-u-md-4-5
                     div.form-group
-                        label.form-label(for="newNomisId") Nomis ID
+                        label.form-label(for="newNomisId") Nomis Username
                         input#newNomisId.form-control(name="newNomisId" type="text" value=roUser.nomis_id)
 
             div.pure-u-1.pure-u-md-2-5
