--- a/server/views/contact/ro.pug
+++ b/server/views/contact/ro.pug
@@ -7,7 +7,7 @@ block content
             include ../includes/back
 
     div.pure-g.largePaddingBottom
-        div.pure-u-1.pure-u-2-3
+        div.pure-u-1
             h2.heading-large.midPaddingBottom Responsible officer
 
             if (contact)
