added searchable box to filter list of cases

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -366,5 +366,7 @@ input[type="time"] {
     padding: 1em;
     border: solid 3px #E78E5F;
 }
-
+.highlighted-string {
+    background-color: darkorange;
+}
 
