--- a/server/views/caseList/alt/DMTable.pug
+++ b/server/views/caseList/alt/DMTable.pug
@@ -35,13 +35,10 @@ table#hdcEligiblePrisoners.largeMarginBottom
                             | #{prisoner.status}
 
                     td
-                        if ['PROCESSING_RO', 'DECIDED', 'MODIFIED', 'MODIFIED_APPROVAL'].includes(prisoner.stage)
-                            if ['Ready to check'].includes(prisoner.status)
+                        if ['APPROVAL', 'DECIDED'].includes(prisoner.stage)
+                            if ['Awaiting decision'].includes(prisoner.status)
                                 a.button.button-primary.fullWidth.center(href="/hdc/taskList/" + prisoner.bookingId role="button")
                                     | Start
                             else
                                 a.button.button-secondary.fullWidth.center(href="/hdc/taskList/" + prisoner.bookingId role="button")
                                     | View
-                        else if ['PROCESSING_CA', 'APPROVAL'].includes(prisoner.stage)
-                            a.button.button-secondary.fullWidth.center(href="/hdc/review/licence/" + prisoner.bookingId role="button")
-                                | View
